--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -1,5 +1,5 @@
 
-
+<br>
 <div class="col-md-10" ng-app="admin_add_information" ng-controller="admin_add_informationController">
     <div class="panel panel-success">
         <div class="panel-heading">
@@ -16,7 +16,7 @@
             <div class="containerbg-">
                 <div class="jumbotron" style="width:100%px;color:#7E7E7E;background-color: #c9e2b3">
                     <center>
-                    <p>RAJAMANGALA UNIVERSITY OF TECHNOLOGY KRUNGTHEP</p> 
+                        <p>RAJAMANGALA UNIVERSITY OF TECHNOLOGY KRUNGTHEP</p> 
                     </center>
                     <div class="containerbg- ">
                         <div class="row">
@@ -45,25 +45,16 @@
             </span>
         </div>
         <div class="panel-body">
-
-
-            <div style="overflow:hidden;">
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <div id="datetimepicker12"></div>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-md-8">
+                        
+                        <div class="datepicker-custom form-control" style="height: 250px">
                         </div>
                     </div>
                 </div>
-<!--                <script type="text/javascript">
-                                    $(function () {
-                                        $('#datetimepicker12').datepicker({
-                                            inline: true,
-                                            sideBySide: true
-                                        });
-                                    });
-                </script>-->
-            </div>
+            </div>   
         </div>
     </div>
+    
 </div>
