--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui-1.11.4.custom/jquery-ui.structure.min.css">
         <link rel="stylesheet" href="jquery-ui-1.11.4.custom/jquery-ui-1.11.4.custom/jquery-ui.theme.min.css">
         <script src="jquery-ui-1.11.4.custom/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
-        
+
         <script src="js/angular.min.js"></script>
         <script src="js/angular-router.js"></script>
         <script src="js/app.js"></script>
@@ -54,9 +54,8 @@
                     <div id="navbar" class="navbar-collapse collapse">
                         <br>
 
-                        <form class="navbar-form navbar-right">
-                            <label ng-controller="appController" style="color: white">{{account.name}}</label>
-                            <br>
+                        <form class="navbar-form navbar-right">        
+                            <h4 align="right" ng-controller="appController" style="color: white">ผู้ใช้งาน : {{account.name}}</h4>
                             <h4 align="right"><a href="http://www.rmutk.ac.th/" class="text-success">Rajamangala University of Technology krungthep</a></h4>                        
                         </form>
                     </div>
