--- a/src/main/webapp/advise_add.html
+++ b/src/main/webapp/advise_add.html
@@ -91,7 +91,7 @@
                         <td>{{ad.title}}</td>
                         <td>{{ad.detail}}</td>
                         <td>
-                            <button >
+                            <button ng-click="editAdvise(ad)">
                                 <span class="mdi-editor-mode-edit"></span>
                             </button>
                         </td>
