--- a/src/main/webapp/course_add.html
+++ b/src/main/webapp/course_add.html
@@ -76,7 +76,7 @@
 
 
 
-<div class="col-md-10" ng-app="course_add" ng-controller="course_addController">  
+<div class="col-md-10" >  
 
     <div>
         <div class="panel panel-primary">
@@ -103,7 +103,7 @@
                                     <td>{{course.subjectName}}</td>
                                     <td>{{course.credit}}</td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
+                                        <button class="btn" ng-click="editCourse(course)">
                                             <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
                                         </button>
                                     </td>
