--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -20,7 +20,7 @@
         </div>
         <div>
             password:
-            <input type="text" name="password">
+            <input type="password" name="password">
         </div>
         <div>
             <input type="submit" value="login">
