--- a/src/main/webapp/admin_add_teacher.html
+++ b/src/main/webapp/admin_add_teacher.html
@@ -25,7 +25,7 @@
 
     <div class="panel panel-success">
         <div class="panel-heading">
-            <h3 class="panel-title"><i class="mdi-social-group-add"></i></h3>
+            <h3 class="panel-title">teacher :</h3>
         </div>
         <div class="panel-body">
             <div class="row">
