--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -39,6 +39,9 @@
         <script src="js/app/parent.js"></script>
         <script src="js/app/student.js"></script>
         <script src="js/app/teacher.js"></script>
+        <script src="js/app/parent_show.js"></script>
+        <script src="js/app/teacher_show.js"></script>
+        <script src="js/app/student_show.js"></script>
         <script src="js/app/timetable.js"></script>
         <script src="js/app/checklist-model.js"></script>
 
@@ -54,8 +57,8 @@
                     <div id="navbar" class="navbar-collapse collapse">
                         <br>
 
-                        <form class="navbar-form navbar-right">        
-                            <h4 align="right" ng-controller="appController" style="color: white">ผู้ใช้งาน : {{account.name}}</h4>
+                        <form class="navbar-form navbar-right" ng-controller="appController" >        
+                            <h4 align="right" style="color: white">ผู้ใช้งาน : {{account.name}} <span id="setting-profile" ng-click="settingProfile()">(เเก้ไขข้อมูลส่วนตัว)</span></h4>
                             <h4 align="right"><a href="http://www.rmutk.ac.th/" class="text-success">Rajamangala University of Technology krungthep</a></h4>                        
                         </form>
                     </div>
