--- a/src/main/webapp/parent_show.html
+++ b/src/main/webapp/parent_show.html
@@ -7,7 +7,7 @@
                     <form class="form-horizontal">
                         <div class="panel panel-primary">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><span class="mdi-action-perm-contact-cal"></span></h3>
+                                <h3 class="panel-title">Parent : </h3>
                             </div>
                             <div class="panel-body">
                                 <div class="form-group">
