--- a/src/main/webapp/student_show.html
+++ b/src/main/webapp/student_show.html
@@ -7,9 +7,10 @@
                     <form class="form-horizontal">
                         <div class="panel panel-primary">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><span class="mdi-action-perm-contact-cal"></span></h3>
+                                <h3 class="panel-title">Student : </h3>
                             </div>
                             <div class="panel-body">
+                                
                                 <div class="form-group">
                                     <div class="col-lg-10">
                                         <div class="row-picture">
