--- a/src/main/webapp/appointment.html
+++ b/src/main/webapp/appointment.html
@@ -1,11 +1,8 @@
 
 <div class="col-md-10">
-    <a href="#/appointmentAdd"><button class="btn btn-success">เพิ่มการนัดหมาย</button></a>
-    <br><br> 
-    <div style="margin:auto;width:800px;">
-        <div id='calendar'></div>
-    </div>
-    <br><br> 
+    <a href="#/appointmentAdd"><button class="btn btn-success" style="width: 200px">เพิ่มการนัดหมาย</button></a>
+
+    <br>
     <div class="panel panel-primary">
         <div class="panel-heading">ข้อมูลนัดหมาย</div>
         <div class="panel-body">
