--- a/src/main/webapp/behavior_show.html
+++ b/src/main/webapp/behavior_show.html
@@ -1,21 +1,25 @@
 
 <div class="col-md-10">
-    <a href="#/behaviorAdd"><button class="btn btn-success">รายงานความประพฤติ</button></a>
+    <a href="#/behaviorAdd"><button class="btn btn-success" style="width: 200px">รายงานความประพฤติ</button></a>
 
-    <div class="list-group-item">
-        <div class="row-picture">
+    <div class="panel panel-default">
+        <div class="panel-heading">
             <span class="mdi-action-search"></span>
         </div>
-
-        <div class="row-content">
-           <label class="control-label" for="inputSuccess">Search....By name</label>
-            <input type="text" class="form-control" id="inputSuccess" placeholder="input name"></span>
+        <div class="panel-body">
+            <div class="row">
+                <label class="col-md-3 control-label">Search By Name</label>
+                <div class="col-md-4">
+                    <input type="text" class="form-control col-md-4" id="inputSuccess" placeholder="input name"></span>
+                </div>
+                <button type="button" class="btn btn-success">
+                    <span class="mdi-action-search"></span>
+                </button>
+            </div>
         </div>
     </div>
-    <br>
 
-    
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
         <div class="panel-heading">รายงานความประพฤติ</div>
         <div class="panel-body">
             <table class="table table-striped table-hover ">
@@ -25,7 +29,6 @@
                         <th>วันที่</th>
                         <th>ชื่อเรื่อง</th>
                         <th>รายละเอียดความประพฤติ</th>
-                        <th>คำอธิบาย</th>
                         <th>File</th>
                     </tr>
                 </thead>
@@ -34,8 +37,28 @@
                         <td>{{beha.namestudent}}</td>
                         <td>{{beha.dates}}</td>
                         <td>{{beha.title}}</td>
-                        <td>{{beha.detail}}</td>
-                        <td>{{beha.description}}</td>
+                        <td>
+                            <h5 data-toggle="modal" data-target="#complete-dialog" class="form-group" id="setting-text">ดูรายละเอียด</h5>
+                            <div id="complete-dialog" class="modal fade form-group" tabindex="-1"> 
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header form-group">
+                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                            <h4 class="modal-title">รายละเอียดรายงานความประพฤติ</h4>
+                                            <br>
+                                        </div>
+                                        <div class="modal-body form-group">
+                                            <div class="col-md-10 ">
+                                                <div style="word-wrap: break-word ; width: 100%">{{beha.detail}}</div>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer form-group">
+                                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
                         <td>
                             <button>
                                 <span class="mdi-file-file-download"></span>
@@ -46,8 +69,4 @@
             </table>
         </div>
     </div>
-
-    <br>
-
-
 </div>
