--- a/src/main/webapp/course_show.html
+++ b/src/main/webapp/course_show.html
@@ -1,27 +1,23 @@
 <br>
 <div class="col-md-10"> 
-    <div class="col-md-1">
-        <span class="mdi-social-school"></span>
-    </div>
-    <div class="col-md-4">
-        <h4 class="panel-title">
-            แสดงข้อมูลโครงสร้างหลักสูตรวิชา	<br>
-            ระดับการศึกษา	: ปริญญาตรี 4 ปี ปกติ <br>
-        </h4>
-    </div>
-    <div class="col-md-1">
-        <span class="mdi-social-school"></span>
-    </div>
-    <div class="col-md-4">
-        <h4 class="panel-title">
-            คณะ	 : ครุศาสตร์อุตสาหกรรม <br>
-            สาขาวิชา : เทคโนโลยีคอมพิวเตอร์ <br>
-        </h4>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="col-md-6">
+                <h4 class="panel-title">
+                    แสดงข้อมูลโครงสร้างหลักสูตรวิชา	<br>
+                    คณะ	 : ครุศาสตร์อุตสาหกรรม <br>
+                </h4>
+            </div>
+            <div class="col-md-6">
+                <h4 class="panel-title">
+                    ระดับการศึกษา	: ปริญญาตรี 4 ปี ปกติ <br>
+                    สาขาวิชา : เทคโนโลยีคอมพิวเตอร์ <br>
+                </h4>
+            </div>
+        </div>
     </div>
 </div>
-
 <div class="col-md-10"> 
-    <br>
     <div>
         <div class="panel panel-primary">
             <div class="panel-heading">
@@ -208,4 +204,8 @@
     </div>
 
 </div>
+<br>
+<br>
+<br>
+<br>
 </div>
