--- a/src/main/webapp/admin_add_parent.html
+++ b/src/main/webapp/admin_add_parent.html
@@ -32,29 +32,26 @@
                     <div class="form-group">
                         <form class="form-horizontal">
                             <div class="form-group">
-                                <div class="icon-preview">
-                                    <label class="col-md-3 control-label "> ชื่อผู้ใช้งาน :</label>
-                                    <div class="col-md-2">
-                                        <input type="username" class="form-control" placeholder="Enter Name"ng-model="parent.name">
-                                    </div>
+                                <label class="col-md-3 control-label "> ชื่อผู้ใช้งาน :</label>
+                                <div class="col-md-5">
+                                    <input type="username" class="form-control" placeholder="Enter name"ng-model="parent.name">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> รหัสผ่าน :</label>
-                                <div class="col-md-2">
-                                    <input type="password" ng-change="checkPassword()" class="form-control" placeholder="Enter PassWord"ng-model="parent.password">
+                                <div class="col-md-5">
+                                    <input type="password" ng-change="checkPassword()" class="form-control" placeholder="Enter password"ng-model="parent.password">
                                 </div>
                             </div>
-                            <div class="form-group"> <i id="confirm" class=""></i>
+                            <div class="form-group">
                                 <label class="col-md-3 control-label"> ยืนยันรหัสผ่าน :</label>
-                                <div class="col-md-2">
-                                    <input ng-change="checkPassword()" type="password" class="form-control" placeholder="Confirm PassWord" ng-model="password">
-
+                                <div class="col-md-5">
+                                    <input ng-change="checkPassword()" type="password" class="form-control" placeholder="confirm password" ng-model="password">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> อีเมล์ :</label>
-                                <div class="col-md-2">
+                                <div class="col-md-5">
                                     <input type="email" class="form-control" placeholder="Enter Email"ng-model="parent.email">
                                 </div>
                             </div>
