--- a/src/main/webapp/admin_add_student.html
+++ b/src/main/webapp/admin_add_student.html
@@ -37,33 +37,33 @@
                                     <label class="col-md-3 control-label "> ชื่อผู้ใช้งาน :</label>
 
                                     <div class="col-md-2">
-                                        <input type="username" class="form-control" placeholder="Enter Name"ng-model="student.name">
+                                        <input type="username" class="form-control" placeholder="Enter name"ng-model="student.name">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> รหัสผ่าน :</label>
-                                <div class="col-md-2">
-                                    <input type="password" ng-change="checkPassword()" class="form-control" placeholder="Enter PassWord"ng-model="student.password">
+                                <div class="col-md-5">
+                                    <input type="password" ng-change="checkPassword()" class="form-control" placeholder="Enter password"ng-model="student.password">
                                 </div>
                             </div>
                             <div class="form-group"> <i id="confirm" class=""></i>
                                 <label class="col-md-3 control-label"> ยืนยันรหัสผ่าน :</label>
-                                <div class="col-md-2">
-                                    <input ng-change="checkPassword()" type="password" class="form-control" placeholder="Confirm PassWord" ng-model="password">
+                                <div class="col-md-5">
+                                    <input ng-change="checkPassword()" type="password" class="form-control" placeholder="Confirm password" ng-model="password">
 
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> อีเมล์ :</label>
-                                <div class="col-md-2">
-                                    <input type="email" class="form-control" placeholder="Enter Email"ng-model="student.email">
+                                <div class="col-md-5">
+                                    <input type="email" class="form-control" placeholder="Enter email"ng-model="student.email">
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> อาจารย์ที่ปรึกษา :</label>
-                                <div class="col-md-2">
+                                <div class="col-md-5">
                                     <select class="form-control" ng-model="student.teacher" ng-options="tea.name for tea in teacher.content">
                                     </select>
                                 </div>
@@ -72,8 +72,8 @@
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> ผู้ปกครอง :</label>
 
-                                <div class="col-md-2">
-                                    <input type="text" class="form-control" placeholder="Enter Name Parent" ng-model="parentShow.name" data-toggle="modal" data-target="#complete-dialog">
+                                <div class="col-md-5">
+                                    <input type="text" class="form-control" placeholder="Enter name Parent" ng-model="parentShow.name" data-toggle="modal" data-target="#complete-dialog">
                                 </div>
 
                                 <div id="complete-dialog" class="modal fade" tabindex="-1">
