--- a/src/main/webapp/admin_add_teacher.html
+++ b/src/main/webapp/admin_add_teacher.html
@@ -35,35 +35,34 @@
                             <div class="form-group">
                                 <div class="icon-preview">
                                     <label class="col-md-3 control-label "> ชื่อผู้ใช้งาน :</label>
-
-                                    <div class="col-md-2">
-                                        <input type="username" class="form-control" placeholder="Enter Name"ng-model="teacher.name">
+                                    <div class="col-md-5">
+                                        <input type="username" class="form-control" placeholder="Enter name"ng-model="teacher.name">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> รหัสผ่าน :</label>
-                                <div class="col-md-2">
-                                    <input type="password" ng-change="checkPassword()" class="form-control" placeholder="Enter PassWord"ng-model="teacher.password">
+                                <div class="col-md-5">
+                                    <input type="password" ng-change="checkPassword()" class="form-control" placeholder="Enter password"ng-model="teacher.password">
                                 </div>
                             </div>
-                            <div class="form-group"> <i id="confirm" class=""></i>
+                            <div class="form-group">
                                 <label class="col-md-3 control-label"> ยืนยันรหัสผ่าน :</label>
-                                <div class="col-md-2">
-                                    <input ng-change="checkPassword()" type="password" class="form-control" placeholder="Confirm PassWord" ng-model="password">
+                                <div class="col-md-5">
+                                    <input ng-change="checkPassword()" type="password" class="form-control" placeholder="Confirm password" ng-model="password">
 
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> อีเมล์ :</label>
-                                <div class="col-md-2">
-                                    <input type="email" class="form-control" placeholder="Enter Email"ng-model="teacher.email">
+                                <div class="col-md-5">
+                                    <input type="email" class="form-control" placeholder="Enter email"ng-model="teacher.email">
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <label class="col-md-2 control-label"></label>
-                                <div class="col-md-3">
+                                <div class="col-md-5">
 
                                     <input value="Save" type="submit" class="btn btn-success"   ng-click="saveTeacher()">
                                     <input value="Clear" type="submit" class="btn btn-info" ng-click="clearUser()">
