--- a/src/main/webapp/advise_show.html
+++ b/src/main/webapp/advise_show.html
@@ -1,50 +1,76 @@
 <div class="col-md-10">
-    <div><a href="#/adviseAdd"><button class="btn btn-success">เพิ่มคำปรึกษา</button></a></div>
+    <div><a href="#/adviseAdd"><button class="btn btn-success" style="width: 200px">เพิ่มคำปรึกษา</button></a></div>
 
-    <br>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <span class="mdi-action-search"></span>
+        </div>
+        <div class="panel-body">
+            <div class="form-group">
+                <label class="col-md-3 control-label">Search</label>
+                <div class="col-md-4">
+                    <select type="status" class="form-control">
+                        <option value="Admin">หมวดวิชาการ</option>
+                        <option value="Teacher">หมวดกิจกรรม</option>
+                        <option value="Student">หมวดทั่วไป</option>
+                        <option value="Parent">อื่น ๆ</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">คำปรึกษา</h3>
         </div>
         <div class="panel-body">
-            <div class="panel-body">
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <label class="col-md-1 control-label"> Search by</label>
-                        <div class="col-md-2">
-                            <select type="status" class="form-control">
-                                <option value="Admin">หมวดวิชาการ</option>
-                                <option value="Teacher">หมวดกิจกรรม</option>
-                                <option value="Student">หมวดทั่วไป</option>
-                                <option value="Parent">อื่น ๆ</option>
-                            </select>
-                        </div>
-                    </div>
-                    
-                    <div class="form-group">
-                        <table class="table table-striped table-hover ">
-                            <thead>
-                                <tr>                           
-                                    <td>นักศึกษา</td>
-                                    <td>วันที่-เวลา</td>
-                                    <td>ชื่อเรื่อง</td>
-                                    <td>หมวด</td>
-                                    <td>รายละเอียดคำปรึกษา</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr ng-repeat="advi in adviseshow.content">
-                                    <td>{{advi.idSubject}}</td>
-                                    <td>{{advi.dates}}</td>
-                                    <td>{{advi.title}}</td>
-                                    <td>{{advi.categoryAdvise.nameCategory}}</td>
-                                    <td>{{advi.detail}}</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </form>
-            </div>
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <table class="table table-striped table-hover ">
+                        <thead>
+                            <tr>                           
+                                <td>นักศึกษา</td>
+                                <td>วันที่-เวลา</td>
+                                <td>หมวด</td>
+                                <td>ชื่อเรื่อง</td>
+                                <td>รายละเอียดคำปรึกษา</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="advi in adviseshow.content">
+                                <td>{{advi.idSubject}}</td>
+                                <td>{{advi.dates}}</td>
+                                <td>{{advi.categoryAdvise.nameCategory}}</td>
+                                <td>{{advi.title}}</td>
+                                <td>
+                                    <h5 data-toggle="modal" data-target="#complete-dialog" class="form-group" id="setting-text">ดูรายละเอียด</h5>
+                                    <div id="complete-dialog" class="modal fade form-group" tabindex="-1"> 
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header form-group">
+                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                                    <h4 class="modal-title">รายละเอียดการให้คำปรึกษา</h4>
+                                                    <br>
+                                                </div>
+                                                <div class="modal-body form-group">
+                                                    <div class="col-md-10 ">
+                                                        <div style="word-wrap: break-word ; width: 100%">{{advi.detail}}</div>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer form-group">
+                                                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </form>
+
             <br>
         </div>
     </div>
