--- a/src/main/webapp/behavior_add.html
+++ b/src/main/webapp/behavior_add.html
@@ -7,52 +7,46 @@
         </div>
         <div class="panel-body">
             <div class="list-group-item-text">
-            <form class="form-horizontal">
-                <fieldset>
-                    <div class="form-group">
-                        <label for="text" class="col-lg-2 control-label">นักศึกษา</label>
-                        <div class="col-lg-10">
-                            <input type="text"  class="form-control" ng-model="behavior.namestudent">
+                <form class="form-horizontal">
+                    <fieldset>
+                        <div class="form-group">
+                            <label for="text" class="col-lg-2 control-label">นักศึกษา</label>
+                            <div class="col-lg-10">
+                                <input type="text"  class="form-control" ng-model="behavior.namestudent">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="text" class="col-lg-2 control-label">วันที่</label>
-                        <div class="col-lg-10">
-                            <input class="datepicker-custom form-control" type="text" ng-model="behavior.dates">
+                        <div class="form-group">
+                            <label for="text" class="col-lg-2 control-label">วันที่</label>
+                            <div class="col-lg-10">
+                                <input class="datepicker-custom form-control" type="text" ng-model="behavior.dates">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="text" class="col-lg-2 control-label">ชื่อเรื่อง</label>
-                        <div class="col-lg-10">
-                            <input type="text" class="form-control" ng-model="behavior.title">
+                        <div class="form-group">
+                            <label for="text" class="col-lg-2 control-label">ชื่อเรื่อง</label>
+                            <div class="col-lg-10">
+                                <input type="text" class="form-control" ng-model="behavior.title">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="text" class="col-lg-2 control-label">รายละเอียดความประพฤติ</label>
-                        <div class="col-lg-10">
-                            <input type="text" class="form-control" ng-model="behavior.detail"> 
+                        <div class="form-group">
+                            <label for="text" class="col-lg-2 control-label">รายละเอียดความประพฤติ</label>
+                            <div class="col-lg-10">
+                                <input type="text" class="form-control" ng-model="behavior.detail"> 
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="text" class="col-lg-2 control-label">คำอธิบาย</label>
-                        <div class="col-lg-10">
-                            <input type="text" class="form-control" ng-model="behavior.description">
+                        <div class="form-group">
+                            <label for="inputFile" class="col-lg-2 control-label">File</label>
+                            <div class="col-lg-10">
+                                <input type="file" id="input-picture"> 
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="inputFile" class="col-lg-2 control-label">File</label>
-                        <div class="col-lg-10">
-                            <input type="file" id="input-picture"> 
+                        <div class="form-group">
+                            <center>
+                                <button class="btn btn-success" ng-click="saveBehavior()">Save</button>
+                                <a href="#/behavior"><button class="btn btn-danger">Cancle</button></a>
+                            </center>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <center>
-                            <button class="btn btn-success" ng-click="saveBehavior()">Save</button>
-                            <a href="#/behavior"><button class="btn btn-danger">Cancle</button></a>
-                        </center>
-                    </div>
-                </fieldset>
-            </form>
+                    </fieldset>
+                </form>
             </div> 
         </div>
     </div>
@@ -72,7 +66,6 @@
                         <th>วันที่</th>
                         <th>ชื่อเรื่อง</th>
                         <th>รายละเอียดความประพฤติ</th>
-                        <th>คำอธิบาย</th>
                         <th>File</th>
                         <th>Edit</th>
                         <th>Delete</th>
@@ -83,11 +76,31 @@
                         <td>{{beha.namestudent}}</td>
                         <td>{{beha.dates}}</td>
                         <td>{{beha.title}}</td>
-                        <td>{{beha.detail}}</td>
-                        <td>{{beha.description}}</td>
+                        <td>
+                            <h5 data-toggle="modal" data-target="#complete-dialog" class="form-group" id="setting-text">ดูรายละเอียด</h5>
+                            <div id="complete-dialog" class="modal fade form-group" tabindex="-1"> 
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header form-group">
+                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                            <h4 class="modal-title">รายละเอียดรายงานความประพฤติ</h4>
+                                            <br>
+                                        </div>
+                                        <div class="modal-body form-group">
+                                            <div class="col-md-10 ">
+                                                <div style="word-wrap: break-word ; width: 100%">{{beha.detail}}</div>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer form-group">
+                                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
                         <td>
                             <button>
-                            <span class="mdi-file-file-download"></span>
+                                <span class="mdi-file-file-download"></span>
                             </button>
                         </td>
                         <td>
