--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,13 +28,13 @@
                         </a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
-                        <form class="navbar-form navbar-right">
+                        <form class="navbar-form navbar-right" action="authentication" method="POST">
 
                             <div class="form-group">
-                                <input type="text" placeholder="Email" class="form-control">
+                                <input type="text" placeholder="Email" name="email" class="form-control">
                             </div>
                             <div class="form-group" style="margin-left: 20px;">
-                                <input type="password" placeholder="Password" class="form-control">
+                                <input type="password" placeholder="Password" name="password" class="form-control">
                             </div>
                             <a href="login.html">
                                 <button type="submit" class="btn btn-success">Sign in</button></a>  
