--- a/src/main/webapp/course_add.html
+++ b/src/main/webapp/course_add.html
@@ -89,7 +89,7 @@
                         <h3 class="panel-title">กลุ่มวิชาสังคมศาสตร์และมนุษย์ศาสตร์ หน่วยกิตต่ำสุด : 6</h3>
                     </div>
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-striped table-hover ">
                             <tbody>
                                 <tr>
                                     <td>รหัสวิชา</td>
@@ -103,13 +103,13 @@
                                     <td>{{course.subjectName}}</td>
                                     <td>{{course.credit}}</td>
                                     <td>
-                                        <button class="btn" ng-click="editCourse(course)">
-                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        <button ng-click="edit(us)">
+                                            <span class="mdi-editor-mode-edit"></span>
                                         </button>
                                     </td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        <button ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>
                                         </button>
                                     </td>
                                 </tr>
@@ -123,7 +123,7 @@
                         <h3 class="panel-title">กลุ่มวิชาภาษา หน่วยกิตต่ำสุด : 12</h3>
                     </div>
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-striped table-hover ">
                             <tbody>
                                 <tr>
                                     <td>รหัสวิชา</td>
@@ -137,13 +137,13 @@
                                     <td>{{course.subjectName}}</td>
                                     <td>{{course.credit}}</td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        <button ng-click="edit(us)">
+                                            <span class="mdi-editor-mode-edit"></span>
                                         </button>
                                     </td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        <button ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>
                                         </button>
                                     </td>
                                 </tr>
@@ -157,7 +157,7 @@
                         <h3 class="panel-title">กลุ่มวิชาวิทยาศาสตร์และคณิตศาสตร์ หน่วยกิตต่ำสุด : 12</h3>
                     </div>
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-striped table-hover ">
                             <tbody>
                                 <tr>
                                     <td>รหัสวิชา</td>
@@ -171,13 +171,13 @@
                                     <td>{{course.subjectName}}</td>
                                     <td>{{course.credit}}</td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        <button ng-click="edit(us)">
+                                            <span class="mdi-editor-mode-edit"></span>
                                         </button>
                                     </td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        <button ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>
                                         </button>
                                     </td>
                                 </tr>
@@ -191,7 +191,7 @@
                         <h3 class="panel-title">กลุ่มวิชาพลศึกษาหรือนันทนาการหรือกิจกรรม หน่วยกิตต่ำสุด : 2</h3>
                     </div>
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-striped table-hover ">
                             <tbody>
                                 <tr>
                                     <td>รหัสวิชา</td>
@@ -205,13 +205,13 @@
                                     <td>{{course.subjectName}}</td>
                                     <td>{{course.credit}}</td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        <button ng-click="edit(us)">
+                                            <span class="mdi-editor-mode-edit"></span>
                                         </button>
                                     </td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        <button ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>
                                         </button>
                                     </td>
                                 </tr>
@@ -238,7 +238,7 @@
                         <h3 class="panel-title">กลุ่มวิชาชีพพื้นฐาน หน่วยกิตต่ำสุด : 37</h3>
                     </div>
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-striped table-hover ">
                             <tbody>
                                 <tr>
                                     <td>รหัสวิชา</td>
@@ -252,13 +252,13 @@
                                     <td>{{course.subjectName}}</td>
                                     <td>{{course.credit}}</td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        <button ng-click="edit(us)">
+                                            <span class="mdi-editor-mode-edit"></span>
                                         </button>
                                     </td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        <button ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>
                                         </button>
                                     </td>
                                 </tr>
@@ -272,7 +272,7 @@
                         <h3 class="panel-title">กลุ่มวิชาชีพบังคับ หน่วยกิตต่ำสุด : 49</h3>
                     </div>
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-striped table-hover ">
                             <tbody>
                                 <tr>
                                     <td>รหัสวิชา</td>
@@ -286,13 +286,13 @@
                                     <td>{{course.subjectName}}</td>
                                     <td>{{course.credit}}</td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        <button ng-click="edit(us)">
+                                            <span class="mdi-editor-mode-edit"></span>
                                         </button>
                                     </td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        <button ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>
                                         </button>
                                     </td>
                                 </tr>
@@ -306,7 +306,7 @@
                         <h3 class="panel-title">กลุ่มวิชาชีพเลือก หน่วยกิตต่ำสุด : 17</h3>
                     </div>
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-striped table-hover ">
                             <tbody>
                                 <tr>
                                     <td>รหัสวิชา</td>
@@ -320,13 +320,13 @@
                                     <td>{{course.subjectName}}</td>
                                     <td>{{course.credit}}</td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-editor-mode-edit"></span>&nbsp;&nbsp;Edit
+                                        <button ng-click="edit(us)">
+                                            <span class="mdi-editor-mode-edit"></span>
                                         </button>
                                     </td>
                                     <td>
-                                        <button class="btn" ng-click="deleteCourse(course)">
-                                            <span class="mdi-action-delete"></span>&nbsp;&nbsp;Delete
+                                        <button ng-click="deleteCourse(course)">
+                                            <span class="mdi-action-delete"></span>
                                         </button>
                                     </td>
                                 </tr>
@@ -347,4 +347,6 @@
         </div>
 
     </div>
+    <br>
+<br>
 </div>
