add file slide and edit information

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -1,5 +1,7 @@
 <br>
-<div class="col-md-10" ng-app="admin_add_information" ng-controller="admin_add_informationController">
+<div class="col-md-8" ng-app="admin_add_information" ng-controller="admin_add_informationController" >
+
+
     <div class="panel panel-success">
         <div class="panel-heading">
             <span class="mdi-action-home">
@@ -7,53 +9,75 @@
             </span>
         </div>
         <div class="panel-body">
-            <ul class="nav nav-pills">
+
+            <ul class="nav nav-pills"  style="margin-left: 100px">
                 <li><a href="http://reg.rmutk.ac.th/registrar/home.asp">ระบบลงทะเบียนเรียน</a></li>
                 <li><a href="http://md.rmutk.ac.th/">ระบบ E-Learning</a></li>
                 <li><a href="http://mis.rmutk.ac.th/">ระบบประเมินผลการสอน</a></li>
             </ul>
-            <div class="containerbg-">
-                <div class="jumbotron" style="width:100%px;color:#7E7E7E;background-color: #c9e2b3">
-                    <center>
-                        <p>RAJAMANGALA UNIVERSITY OF TECHNOLOGY KRUNGTHEP</p> 
-                    </center>
-                    <div class="containerbg- ">
-                        <div class="row">
-                            <div class="col-sm-4" ng-repeat="news in informationshow.content">
-                                <div class="jumbotron" style="color:white;background-color: #31A761;font-size: large" >
-                                    {{news.title}}
-                                </div>
-                                <p style="font-size: medium">{{news.startTime}}</p>
-                                <p style="font-size: medium">{{news.pageBrief}}</p>
-                                <p style="font-size: medium">{{news.file}}</p>
-                                <p style="font-size: medium">{{news.description}}</p>
-                                <p style="font-size: medium"><a href="{{news.linkWeb}}">{{news.linkWeb}}</a></p>
-                            </div>
 
+
+            <div class="panel panel-default" ng-repeat="news in informationshow.content">
+                <div class="panel-heading">
+                    <h3 class="panel-title">{{news.title}}</h3>
+                </div>
+                <div class="panel-body">
+                    <p style="font-size: small">{{news.startTime}}</p>
+                    <p style="font-size: small">{{news.pageBrief}}</p>
+                    <p style="font-size: small">{{news.file}}</p>
+                    <p style="font-size: small">{{news.description}}</p>
+                    <p>
+                    <h5 data-toggle="modal" data-target="#complete-dialog" class="form-group" id="setting-text">ดูรายละเอียด</h5>
+                    <div id="complete-dialog" class="modal fade form-group" tabindex="-1"> 
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header form-group">
+                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                    <h4 class="modal-title">รายละเอียดการให้คำปรึกษา</h4>
+                                    <br>
+                                </div>
+                                <div class="modal-body form-group">
+                                    <div class="col-md-10 ">
+                                        <div style="word-wrap: break-word ; width: 100%">{{news.description}}</div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer form-group">
+                                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    </p>
+                    <p style="font-size: small"><a href="{{news.linkWeb}}">{{news.linkWeb}}</a></p>
                 </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div class="col-md-4">
+    <div class="datepicker-custom form-control" style="height: 250px">
+    </div>
+</div>
+
+
+
+
+
+<div id="complete-dialog" class="modal fade" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 class="modal-title">ไม่มี! ที่คุณค้นหา</h4>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" data-dismiss="modal">ตกลง</button>
+
             </div>
         </div>
     </div>
 
-    <div class="panel panel-success">
-        <div class="panel-heading">
-            <span class="mdi-action-today">
-                <h3 class="panel-title">Calendar</h3>
-            </span>
-        </div>
-        <div class="panel-body">
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-md-8">
-                        
-                        <div class="datepicker-custom form-control" style="height: 250px">
-                        </div>
-                    </div>
-                </div>
-            </div>   
-        </div>
-    </div>
-    
 </div>
