--- a/src/main/webapp/admin_add_student.html
+++ b/src/main/webapp/admin_add_student.html
@@ -64,8 +64,49 @@
                             <div class="form-group">
                                 <label class="col-md-3 control-label"> อาจารย์ที่ปรึกษา :</label>
                                 <div class="col-md-5">
-                                    <select class="form-control" ng-model="student.teacher" ng-options="tea.name for tea in teacher.content">
-                                    </select>
+                                    <!--                                    <select class="form-control" ng-model="student.teacher" ng-options="tea.name for tea in teacher.content">
+                                                                        </select>-->
+                                    <div class="col-md-5">
+                                        <input type="text" class="form-control" placeholder="Enter name Teacher" ng-model="teacherShow.name" data-toggle="modal" data-target="#complete-teachet">
+                                    </div>
+
+                                    <div id="complete-teachet" class="modal fade" tabindex="-1">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                                    <h4 class="modal-title">เลือกอาจารย์ที่ปรึกษา</h4>
+                                                </div>
+                                                <br>
+                                                <div class="modal-body">
+                                                    <div class="col-md-5">
+                                                        <input type="teacher" class="form-control" placeholder="Enter Teacher" ng-model="keyword">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <table class="table table-striped table-hover ">
+                                                            <thead>
+                                                                <tr>
+                                                                    <th>ชื่อ</th>
+                                                                    <th>เลือก</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                                <tr ng-repeat="tea in teacher.content">
+                                                                    <td>{{tea.name}}</td>
+                                                                    <td><a ng-click="selectTeacher(tea)" data-dismiss="modal">เลือก</a></td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button class="btn btn-danger" data-dismiss="modal">Exit</button>
+                                                    </div>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
 
@@ -73,10 +114,10 @@
                                 <label class="col-md-3 control-label"> ผู้ปกครอง :</label>
 
                                 <div class="col-md-5">
-                                    <input type="text" class="form-control" placeholder="Enter name Parent" ng-model="parentShow.name" data-toggle="modal" data-target="#complete-dialog">
+                                    <input type="text" class="form-control" placeholder="Enter name Parent" ng-model="parentShow.name" data-toggle="modal" data-target="#complete-parent">
                                 </div>
 
-                                <div id="complete-dialog" class="modal fade" tabindex="-1">
+                                <div id="complete-parent" class="modal fade" tabindex="-1">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
@@ -120,7 +161,7 @@
                                                         <ul class="pagination pagination-sm">
                                                             <li id="first-page"><a ng-click="firstPage()">&Lt;</a></li>
                                                             <li id="pre-page" ><a ng-click="prePage()">&lt;</a></li>
-                                                            <li><a>{{currentPage+1}}</a></li>
+                                                            <li><a>{{currentPage + 1}}</a></li>
                                                             <li id="next-page"><a ng-click="nextPage()">&gt;</a></li>
                                                             <li id="final-page"><a ng-click="finalPage()">&gg;</a></li>
                                                         </ul>
